fix service worker restart issue; styling fix on mobile ux (#4)
* debug

* debug

* show identities when ids exist

* debug chrome

* show identities when present

* debug

* add debug

* fix mobile responsiveness

* fix z-index

--- a/src/components/BottomNav/bottom-nav.scss
+++ b/src/components/BottomNav/bottom-nav.scss
@@ -2,6 +2,11 @@
 
 .bottom-nav {
   display: none;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: $white;
+  z-index: 900;
 
   @media only screen and (max-width: 768px) {
     display: flex !important;
