--- a/src/pages/App/app.scss
+++ b/src/pages/App/app.scss
@@ -26,6 +26,10 @@ html {
     margin: 0 auto;
     overflow-y: auto;
     flex: 1 1 auto;
+
+    @media only screen and (max-width: 768px) {
+      margin-bottom: 3.25rem;
+    }
   }
 
   &__meta-content {
